...
    <string name="datos_obtenidos">Datos obtenidos con éxito.</string>
    <string name="ubicacion_default">Se tomará como ubicación actual el ayuntamiento de Santander.</string>

    <string name="action_settings"></string>
    <string-array name="tiposCarburante">
        <item>Carburante</item>
        <item>Gasolina 95</item>
        <item>Gasolina 98</item>
        <item>Diésel</item>
        <item>Diésel Super</item>
    </string-array>
    <string-array name="marcas">
        <item>Marca</item>
        <item>Carrefour</item>
        <item>Campsa</item>
        <item>Avia</item>
...
