...
        android:title="Orden€"
        android:icon="@drawable/euro"
        yourapp:showAsAction="ifRoom"  />

    <item
        android:id="@+id/filtro_setting"
        android:title="Filtros"
        app:showAsAction="never" />
    
    <item
        android:id="@+id/recarga"
        android:title="Limpia Filtros"
        app:showAsAction="never" />
...
