...
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Elija el tipo de carburante:" />

            <Spinner
                android:id="@+id/spinnerCarburante"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:spinnerMode="dialog" />

            <TextView
                android:layout_width="wrap_content"
...
